# sprocket_from_scratch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  presentation.org  test_import.json  test_simple.json
examples/: common_tasks.wdl  data_processing_pipeline.wdl  genomic_analysis.wdl  hello_world.wdl  multi_step_analysis.wdl  sample_inputs.json  test_invalid.json  test_invalid.wdl  test_invalid2.json  workflow_with_import.wdl
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/cache/: mod.rs
src/execution/: docker_executor.rs  engine.rs  mod.rs  task_executor.rs  workflow_executor.rs
src/parser/: ast.rs  import_resolver.rs  mod.rs  wdl_parser.rs
src/storage/: memory_store.rs  mod.rs  sqlite_store.rs
src/visualization/: mod.rs
tests/: import_tests.rs  integration_tests.rs  namespaced_call_test.rs
