[package]
name = "sprocket"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"

# Parsing
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async and utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
async-trait = "0.1"
sha2 = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tokio-test = "0.4"

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.0"
